# video-cli

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: guard.sh
.claude/skills/feature/: SKILL.md
.claude/skills/run/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/twada/: SKILL.md
.github/workflows/: test.yml
domain/: media_fingerprint.py  media_info.py  operations.py  trim_range.py
ffmpeg/: commands.py  concat_strategy.py  probe.py  probe_parser.py  runner.py
shared/: command_formatter.py  errors.py  formatters.py
tests/: test_command_formatter.py  test_commands.py  test_concat_flow.py  test_concat_strategy.py  test_file_validators.py  test_formatters.py  test_main_dispatch.py  test_media_fingerprint.py  test_media_validators.py  test_probe.py  test_probe_parser.py  test_resize_flow.py  test_review_actions.py  test_runner.py  test_trim_flow.py  test_trim_range.py  test_value_validators.py
ui/: main_menu.py  prompts.py  review.py  review_actions.py
usecases/: concat_flow.py  flow_result.py  resize_flow.py  shared_flow.py  trim_flow.py
validation/: file_validators.py  media_validators.py  value_validators.py
