[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["domain*", "shared*", "validation*", "ffmpeg*", "ui*", "usecases*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

